<resources>
    <string name="app_name">MyApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string-array name="drop_down_menu">
        <item>Admin</item>
        <item>User</item>
    </string-array>
    <string name="title_activity_friend_list">Friend List</string>
</resources>
